# rust-softhsm2-pkcs11-proxy

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  release.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/openbao-config/: server.hcl
deploy/kubernetes/: secret.yaml  softhsm-proxy.yaml
pkcs11-common/: Cargo.toml  build.rs
pkcs11-common/src/: error.rs  lib.rs  protocol.rs  psk.rs  tls.rs
pkcs11-proxy-client/: Cargo.toml
pkcs11-proxy-client/src/: deserialize.rs  functions.rs  lib.rs  serialize.rs  state.rs
pkcs11-proxyd/: Cargo.toml
pkcs11-proxyd/src/: handler.rs  main.rs  server.rs  session_map.rs
proto/: pkcs11_proxy.proto
scripts/: entrypoint.sh
