[package]
name = "pkcs11-proxy-client"
version = "0.1.0"
edition = "2021"
description = "PKCS#11 cdylib proxy client – loaded by OpenBao via dlopen"

[lib]
crate-type = ["cdylib"]

[dependencies]
pkcs11-common = { path = "../pkcs11-common" }
cryptoki-sys = "0.2"
prost = "0.13"
once_cell = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
